--- a/shiny/golem_run_app.Rmd
+++ b/shiny/golem_run_app.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Deploying apps with {golem}'s `run_app()`"
 output: github_document
+date: "`r format(Sys.time(), '%B %d, %Y')`"
 ---
 
 ```{r setup, include=FALSE}
