--- a/shiny/ui_functions.Rmd
+++ b/shiny/ui_functions.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Creating UI functions"
 output: github_document
+date: "`r format(Sys.time(), '%B %d, %Y')`"
 ---
 
 ```{r setup, include=FALSE}
