--- a/README.Rmd
+++ b/README.Rmd
@@ -20,3 +20,19 @@ knitr::opts_chunk$set(echo = TRUE)
 - [Utilizing {golem}'s `run_app()`](shiny/golem_run_app.md)
 - [Functional UI development](shiny/ui_functions.md)
 </details>
+
+<details>
+<summary>October 16, 2020</summary>
+
+  - [Using mocks in unit tests](r_programming/mockery.md)
+  - [Tooltips in R Shiny Using chartui](shiny/tooltips.md)
+
+</details>
+
+<details>
+<summary>November 19, 2020</summary>
+
+  - [Better database connections with `pool`]()
+  - [Developing and deploying R pipelines with `drake`](r_programming/drake_pipelines.md)
+
+</details>
