Add link to pool doc

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(echo = TRUE)
 <details>
 <summary>November 19, 2020</summary>
 
-  - [Better database connections with `pool`]()
+  - [Better database connections with `pool`](r_programming/pool.md)
   - [Developing and deploying R pipelines with `drake`](r_programming/drake_pipelines.md)
 
 </details>
